# MiQi

./: .gitattributes  .gitignore  .gitlab-ci.yml.notuse  .pr_body.md  .pr_payload.json  .releaserc.json  404.html  CHANGELOG.md  CNAME  Dockerfile  HANDOFF--feature-runtime-v2-phase-0-2.md  PR_DESCRIPTION.md  README.md  README_zh.md  ROADMAP.md  action.yml  ai-presentation.pptx  execution-policy-mockup.html  index.html  miqi.spec  mkdocs.yml  mode-selector-mockup.html  mode-selector-prototype.html  package-lock.json  package.json  policy-compare.html  pr-body.md  pr_body.json  pr_body.md  pr_body_fix.json  pr_body_fix.md  pr_current.md  pr_patch.json  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  desktop-ci.yml  issue-validator.yml  pr-template-check.yml  pr-title-check.yml  python-tests.yml  release.yml
apps/desktop/: .gitignore  .prettierrc  drive-test.mjs  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  record-splash.js  vitest.config.ts
architecture/: index.html
architecture/data-flow/: index.html
architecture/project-structure/: index.html
backend/agent/: index.html
backend/bridge/: index.html
backend/memory/: index.html
backend/providers/: index.html
backend/session/: index.html
backend/tools/: index.html
backend/trace/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
deployment/docker/: index.html
deployment/packaging/: index.html
developer-guide/: index.html
docs/: architecture.md  changelog.md  configuration.md  contributing.md  developer-guide.md  getting-started.md  index.md  internal-alpha-smoke.md  kun-runtime-migration.md  mcp-integration.md
docs/architecture/: data-flow.md  project-structure.md
docs/assets/: splash-demo.webm
docs/backend/: agent.md  bridge.md  memory.md  providers.md  session.md  tools.md  trace.md
docs/deployment/: docker.md  packaging.md
docs/frontend/: features.md  ipc.md  overview.md  skillhub.md
docs/javascripts/: mermaid-zoom.js
docs/releases/: v0.8.0.md
docs/stylesheets/: extra.css
frontend/features/: index.html
frontend/ipc/: index.html
frontend/overview/: index.html
frontend/skillhub/: index.html
getting-started/: index.html
internal-alpha-smoke/: index.html
kun-runtime-migration/: index.html
mcp-integration/: index.html
mcps/wecom-mcp/: .env.example  Dockerfile  README.md  pyproject.toml
mcps/wecom-mcp/src/wecom_mcp/: __init__.py  auth.py  server.py
mcps/wecom-mcp/src/wecom_mcp/tools/: __init__.py  media.py  messages.py
mcps/wecom-mcp/src/wecom_mcp/webhook/: handler.py
miqi/: paths.py
miqi/agent/: __init__.py  context.py  context_compressor.py  loop.py  skills.py  subagent.py
miqi/bridge/: event_emitter.py  executor.py  loop.py  server.py
miqi/channels/: telegram.py
plan/: 48-remove-legacy-agentloop.md  60-trustworthy-test-baseline-acceptance.md  60-trustworthy-test-baseline-design.md
scripts/: diagnose.ps1  diagnose.sh  encrypt_builtin_bundle.py  update-version.sh  verify-session-isolation.sh
search/: search_index.json
test-screenshots/: drive-test.mjs
tests/: conftest.py  test_capability_markers.py  test_commands.py  test_consolidate_offset.py  test_event_emitter.py  test_miqi_home_consumers.py  test_nudge_cleanup.py  test_paths.py  test_provider_resilience.py  test_sessions_gitignore.py  test_task_trace.py  test_test_environment_isolation.py  test_tool_validation.py  test_trace_auto_instrument.py  test_tui_runtime.py
(+571 files in other folders)
