[project]
name = "miqi"
version = "0.4.0"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "miqi contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.50.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "tzdata>=2024.1 ; sys_platform == 'win32'",
    "pyinstaller>=6.20.0",
    "pyyaml>=6.0.3",
    "aiosqlite>=0.22.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "textual>=8.2.7",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]
trace = [
    "fastembed>=0.6.0,<1.0.0",
    "numpy>=1.24.0",
    "blake3>=0.4.0,<1.0.0",
]
otel = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]

[project.scripts]
miqi = "miqi.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miqi"]

[tool.hatch.build.targets.wheel.sources]
"miqi" = "miqi"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "miqi/**/*.py",
    "miqi/templates/**/*.md",
    "miqi/skills/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "miqi/",
    "README.md",
    "LICENSE",
]

[tool.pylint.messages_control]
# PEP 562 __getattr__ lazy imports; disable false positives
disable = [
    "undefined-all-variable",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "self_managed_env: test fully isolates and manages its own home and temp environment",
    "subprocess: requires permission to start a normal local subprocess",
    "sandbox: requires a real OS sandbox adapter",
    "wsl: requires Windows Subsystem for Linux and a usable distribution",
    "bwrap: requires a usable bubblewrap executable on Linux or WSL",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
