[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wecom-mcp"
version = "0.1.0"
description = "WeCom (企业微信) MCP Server - messaging, media, webhook for AI Agents"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.0.0",
    "wecom-aibot-sdk>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
wecom-mcp = "wecom_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
